2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/02_DeclInit.deca
// Description:
//    tests de programme correct, declaration de plusieurs avec initialisation.
//
// Resultats:
//    programme correct.
//
// Historique:
//    cree le 09/01/2024
{   
    int x = 3,y,z = 5;
    float a = 2.5,b = 2.7 ,c;
    boolean d = true ,e = false;

}