2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/28_FQeq.deca
// Description:
//    tests de programme incorrect syntaxiquement ,EQEQ incorrecte car absence du membre gauche
//
// Resultats:
//    ligne 12 : Erreur, extraneous input ';'
//
// Historique:
//    cree le 09/01/2024
{
    float x = 0.5;
    x = 0.5*3;
    x == ; 
}